--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+
 body{
     margin:0;
     padding:0;
@@ -7,6 +8,7 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     max-height: 100vh;
+    min-height: 100vh;
     overflow: hidden;
 }
 
